--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "main": "index.js",
   "author": "Diogo Osório <diogo.g.osorio@gmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "engines": {
+    "node": "^8"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
+  }
 }
