--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   "engines": {
     "node": "^8"
   },
+  "scripts": {
+    "test": "mocha --exit"
+  },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "prettier": "1.14.3"
+  },
+  "dependencies": {
+    "realm": "^2.16.2"
   }
 }
