--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,31 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "es2015",
+    "module": "commonjs",
     "declaration": true,
     "declarationDir": "build/types",
     "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
     "sourceMap": true,
+    "downlevelIteration": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "resolveJsonModule": true,
     "outDir": "build/main",
+    "lib": [
+      "es2016"
+    ],
     "typeRoots": [
-      "node_modules/@types",
-      "src/types"
+      "node_modules/@types"
+    ],
+    "types": [
+      "mocha",
+      "node",
+      "realm"
     ]
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts", "src/cli.js"
   ],
   "exclude": [
     "node_modules",
