--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "mocha -r ts-node/register test/**/*.test.ts --exit",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json \"src/**/*.ts\" \"test/**/*.ts\""
+    "lint": "tslint -p tsconfig.json \"src/**/*.ts\" \"test/**/*.ts\"",
+    "doc": "typedoc --out doc/ src/"
   },
   "devDependencies": {
     "@types/chai": "^4.1.6",
@@ -30,6 +31,7 @@
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
+    "typedoc": "^0.12.0",
     "typescript": "^3.1.1"
   },
   "dependencies": {
