--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "realm-exporter",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Export a Realm database into a more traditional format (e.g. CSV)",
   "author": "Diogo Osório <diogo.g.osorio@gmail.com>",
   "license": "MIT",
   "private": false,
-  "keywords": ["realm", "realm export", "realm exporter", "realm csv"],
+  "keywords": [
+    "realm",
+    "realm export",
+    "realm exporter",
+    "realm csv"
+  ],
   "types": "build/types/src/**/*.d.ts",
   "files": [
     "build"
